Abyss: Fix dropmarker not showing on certain menulists - Bug #100006
(integrated from komodo (trunk) change 81400 by nathanr)

git-svn-id: http://svn.openkomodo.com/repos/openkomodo/trunk@13429 b87d16e7-d29f-4ee1-b5ec-817d645d335f

--- a/src/chrome/komodo/skin/plat/shared/_config/window.less
+++ b/src/chrome/komodo/skin/plat/shared/_config/window.less
@@ -63,8 +63,9 @@
 
 /* textboxes */
 @textbox-appearance:                    disabled;
-@menulist-appearance:                   menulist;
-@menulist-dropmarker-visibility:        disabled;
+@menulist-appearance:                   disabled;
+@menulist-editable-box-appearance:      disabled;
+@menulist-dropmarker-appearance:        disabled;
 @textbox-background:                    disabled;
 @textbox-color:                         disabled;
 @textbox-box-shadow:                    disabled;
