--- a/src/modules/abyss_skin/skin/_config/window.less
+++ b/src/modules/abyss_skin/skin/_config/window.less
@@ -62,7 +62,8 @@
 
 @textbox-appearance:                    none !important;
 @menulist-appearance:                   none !important;
-@menulist-dropmarker-visibility:        collapse;
+@menulist-editable-box-appearance:      none !important;
+@menulist-dropmarker-appearance:        none;
 @textbox-background:                    lighten(@window-background, 5%);
 @textbox-color:                         #F2F2F2;
 @textbox-box-shadow:                    none;
